updates table from lesson 3, adds form

--- a/lesson3_04-02-22/table.html
+++ b/lesson3_04-02-22/table.html
@@ -9,16 +9,19 @@
             padding: 10px;
             border-collapse: collapse;
         }
+        table td {width:100px ;
+        }
+        tr {height:40px}
     </style>
 </head>
 <body>
-<table style="width: 50%;">
-    <tbody>
+<table>
     <tr>
         <td rowspan="2"></td>
         <td colspan="2"></td>
         <td colspan="2"></td>
         <td></td>
+    </tr>
     </tr>
     <tr>
         <td colspan="4"></td>
@@ -39,12 +42,11 @@
         <td colspan="2" rowspan="3"></td>
     </tr>
     <tr>
-        <td></td>
+        <td rowspan="2" colspan="3" ></td>
     </tr>
     <tr>
         <td></td>
     </tr>
-    </tbody>
 </table>
 </body>
 </html>
