--- a/lesson4_07-02-22/form.html
+++ b/lesson4_07-02-22/form.html
@@ -16,8 +16,8 @@
 <form action="" method="get">
 <table>
 <tr>
-  <td colspan="3" style="padding-left:100px">
-    <span style="padding-left:80px">Pizza Shop 2.0</span>
+  <td colspan="3" style="padding-left: 100px">
+    <span style="padding-left: 80px">Pizza Shop 2.0</span>
   </td>
 </tr>
   <tr>
@@ -36,15 +36,15 @@
     <tr>
   <td>Pizza Sauce</td>
   <td>
-    <select name="souce" id="text">
+    <select name="sauce" id="text">
       <option value="tomato">Tomato</option>
-      <option value="chesse"> Cheese</option>
+      <option value="cheese"> Cheese</option>
     <option value="garlic">Garlic</option>
     </select>
   </td>
 </tr>
   <tr>
-    <td>Optinal Extras</td>
+    <td>Optional Extras</td>
     <td>
       <input type="checkbox">Extra Cheese
       <input type="checkbox">Gluten Free Base
@@ -60,7 +60,7 @@
   </tr>
   <tr>
     <td colspan="3">
-<button type="reset">Send me Order</button>
+<button type="reset">Send my Order</button>
     </td>
   </tr>
 </table>
