--- a/lesson4_07-02-22/form.html
+++ b/lesson4_07-02-22/form.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<form action="" method="get">
+<form method="post">
 <table>
 <tr>
   <td colspan="3" style="padding-left: 100px">
@@ -23,7 +23,7 @@
   <tr>
     <td style="padding-right: 80px">Name</td>
     <td style="padding-right: 150px">
-     <input type="text" id="name">
+     <input type="text" id="name" autocomplete="off">
     </td>
   </tr>
   <tr>
