Adds cv nomber 1

--- a/lesson4_07-02-22/form.html
+++ b/lesson4_07-02-22/form.html
@@ -23,7 +23,7 @@
   <tr>
     <td style="padding-right: 80px">Name</td>
     <td style="padding-right: 150px">
-     <input type="text" id="name" autocomplete="off">
+     <input type="text" id="name" autocomplete="off" autofocus="name">
     </td>
   </tr>
   <tr>
