--- a/lesson 8_18_02_21_cv/index.html
+++ b/lesson 8_18_02_21_cv/index.html
@@ -12,6 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<div class="wrapper">
 <header>
   <h1>BRIDGET TORRES</h1>
   <div></div>
@@ -151,5 +153,6 @@
     </table>
   </article>
 </section>
+</div>
 </body>
 </html>
